[package]
authors = ["Edd Barrett <vext01@gmail.com>"]
name = "rustc_yk_sections"
version = "0.0.0"

[lib]
name = "rustc_yk_sections"
path = "lib.rs"
crate-type = ["dylib"]
test = false

[dependencies]
rustc = { path = "../librustc" }
rustc_yk_link = { path = "../librustc_yk_link" }
ykpack = { git = "https://github.com/softdevteam/ykpack" }
rustc_codegen_utils = { path = "../librustc_codegen_utils" }
